[package]
name = "p2p-fileshare"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.0", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = "0.3"